--- a/src/style.css
+++ b/src/style.css
@@ -137,6 +137,66 @@ body {
   display: none;
 }
 
+#contentOfCards {
+  display:flex;
+  flex-wrap: wrap; 
+  margin:20px;
+  margin-top: 40px;
+}
+
+.pokeCardsStyle {
+  width: 180px;
+  height: 180px;
+ 
+  background: #FFFFFF;
+  border: 2px solid #F49321;
+  border-radius: 30px;
+  margin: 10px; 
+}
+
+.pokeCardsStyle:hover {
+  background: rgb(243, 200, 151);
+  
+  transition: .5s;
+  -ms-transform: scale(1.06); /* IE 9 */
+  -webkit-transform: scale(1.06); /* Safari 3-8 */
+  transform: scale(1.06); 
+}
+
+.pokeCardsPic { 
+  width: 100px;
+  height: 100px; 
+}
+
+.pokeCardsName {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+ 
+  color: #F49321;
+}
+
+.pokeCardsLine {
+  width: 140px;
+  margin: 3px;
+  margin-left: 17px;
+  background: #F49321;
+  border: 1px solid #F49321;
+}
+
+ .pokeCardsNum {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 11px;
+  line-height: 13px;
+
+  color: #F49321;
+} 
+
+
 
 
   /*div: borde, alto, ancho
