--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,10 @@ body {
     background: #FFFFFF;
     border: 2px solid #FFCC03;
     border-radius: 60px;
-    font-size: 18px;
+    font-size: 16px;
+    text-align: center;
+   
+  
   }
 
   .pokeImageStyle {
@@ -87,6 +90,13 @@ body {
     border-top-right-radius: 30px;
     border-top-left-radius: 30px;
   }
+  
+   .pokeImageStyle:hover {
+    background:   rgba(72, 255, 231, 0.609);
+    opacity: 60%;
+    transition: .5s;
+    cursor: pointer;
+  } 
 
   #pokePic1 {
     justify-content: center;
@@ -121,7 +131,7 @@ body {
     justify-content: center;
     height: 67px;
     font-family: 'Lato', sans-serif;
-    font-size: 22px;
+    font-size: 25px;
     text-align: center;
     color: #FFFFFF;
     background: #FFCC03;
@@ -222,10 +232,12 @@ body {
   } 
 
   select {
+    display: flex;
     width: 278px;
     height: 38px;
     margin: 10px;
-    margin-top: 0px; 
+    margin-top: 10px;
+    margin-left: 20px; 
     cursor: pointer;
   
     background: #FFCC03;
@@ -235,7 +247,7 @@ body {
 
     font-family: 'Lato', sans-serif;
     font-style: normal;
-    font-weight: bold;
+    /* font-weight: bold; */
     font-size: 20px;
     line-height: 24px;
 
@@ -243,6 +255,7 @@ body {
   }
 
   option {
+    display: flex;
     width: 221px;
     margin-top: 100px;
     font-family: 'Lato', sans-serif;
@@ -262,7 +275,8 @@ body {
     height: 100px;
     margin-top: 40px;
     background: linear-gradient(90deg, rgba(72, 255, 231, 0.609) 0%, rgba(83, 223, 158, 0.719) 100%);
-    
+    background-size: auto;
+    mix-blend-mode: normal;
   }
 
 
@@ -271,14 +285,89 @@ body {
   @media (min-width: 320px) and (max-width: 767px) {
     #pokeHeader {
       width: 342px;
-      height: 110px;
-      padding: 10px 16px;
+      height: 70px;   
   }
+
     #pokeLogo {
       display: flex;
       justify-content: center;
-      width: 300px;
+      width: 210px;
+      height: 80px;
     }
+    
+    .pokeButtonNav {
+      width: 125px;
+      height: 18px;
+      border: 10px;
+      border-radius: 7px;
+      margin-right: 10px;
+      font-size: 10px;
+      
+  }
+
+
+
+
+
+    #pokePic1 {
+      justify-content: center;
+      width: 354px;
+      height: 80px;
+      margin-top: 60px;
+      margin-left: 7px;
+    }
+
+    .pokeImageStyle {
+      border-top-right-radius: 20px;
+      border-top-left-radius: 20px;
+    }
+
+    #elegirPokeBtn {
+      width: 356px;
+      margin-left: 7px;
+    }
+
+    .pokeElegir {
+      height: 30px;
+      font-size: 16px;
+      border-bottom-right-radius: 20px;
+      border-bottom-left-radius: 20px;
+    }
+ 
+    #pokePic2 {
+      justify-content: center;
+      width: 354px;
+      height: 80px;
+      margin-top: 15px;
+      margin-left: 7px;
+    }
+
+    #pokePic3 {
+      justify-content: center;
+      width: 354px;
+      height: 80px;
+      margin-top: 15px;
+      margin-left: 7px;
+    }
+      
+    #elegirPokeBtn3 {
+      width: 356px;
+      margin-left: 7px;
+    }
+    
+
+
+    #elegirPokeBtn2 {
+      width: 356px;
+      margin-left: 7px;
+    }
+
+
+
+
+
+
+
     .pokeCardsName {
       font-size: 10px;
     }
@@ -301,6 +390,11 @@ body {
     flex-direction: column;
   }
 }
+
+ #pokeFooter {
+  width: 380px;
+  height: 50px;   
+} 
 
   
 
