--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ body {
   .barraNav {
     display: flex;
     justify-content: left; 
-    margin-left: 65px;
+    /* margin-left: 65px; */
   }
 
   .pokeButtonNav {
@@ -63,15 +63,11 @@ body {
     transition: .5s;
     cursor: pointer;
   }
-  
 
-  #pokeSearch {
+  .pokeSearchStyle {
     display: flex; 
     margin-top: -47px;
     margin-left: 1200px;
-  }
-
-  .pokeSearchStyle {
     width: 240px;
     height: 38px;
     background: #FFFFFF;
@@ -79,8 +75,6 @@ body {
     border-radius: 60px;
     font-size: 16px;
     text-align: center;
-   
-  
   }
 
   .pokeImageStyle {
@@ -281,6 +275,8 @@ body {
 
   /* RESPONSIVE para Móvil */
   @media (min-width: 320px) and (max-width: 767px) {
+
+    
     #pokeHeader {
       width: 342px;
       height: 70px;   
@@ -299,19 +295,22 @@ body {
       border: 10px;
       border-radius: 7px;
       margin-right: 10px;
-      font-size: 10px;
-      
+      font-size: 10px;    
   }
 
-
-
-
+  .pokeSearchStyle {
+    display: flex;
+    height: 30px;
+    margin-top: 6px;
+    margin-left: 70px;
+  }
 
     #pokePic1 {
       justify-content: center;
       width: 354px;
       height: 80px;
-      margin-top: 60px;
+      margin-top: 
+      540px;
       margin-left: 7px;
     }
 
@@ -353,33 +352,32 @@ body {
       margin-left: 7px;
     }
     
-
-
     #elegirPokeBtn2 {
       width: 356px;
       margin-left: 7px;
     }
 
-
-
-
     .pokeCardsName {
       font-size: 10px;
     }
+
     .pokeCardsLine {
     width: 45px;
     margin: auto;
    }
+
     .pokeCardsStyle {
     width: 90px;
     height: 90px;
     border: 2px solid #F49321;
     border-radius: 15px;
   }
+
  .pokeCardsPic {
     width: 50px;
     height: 50px;
   }
+
   .barraNav2 {
     display: flex;
     flex-direction: column;
